+Page Register update template +commandes+contact ++

--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -12,7 +12,7 @@
 				<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 				
 				<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
-				<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
+				<a class="menu-link notify desk" href="{{path('app_login')}}">Connexion</a>
 					<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
 				{# <a class="menu-link notify" href="{{path('templates/APIMETO/index.php')}}">Météo</a> #}
 
