--- a/templates/partials/headermobile.html.twig
+++ b/templates/partials/headermobile.html.twig
@@ -9,7 +9,7 @@
 						<a class="main-header-link is-active" href="{{path('app_contact')}}">Contact</a>
 						<a class="main-header-link is-active" href="{{path('show_order')}}">Mes commandes</a>
 							<a class="main-header-link is-active" href="{{path('app_register')}}">Inscription</a>
-						<a class="main-header-link" href="{{path('app_contact')}}">Connexion</a>
+						<a class="main-header-link" href="{{path('app_login')}}">Connexion</a>
 
 					</div>
 				</div>
