--- a/templates/user/order.user.html copy.twig
+++ b/templates/user/order.user.html copy.twig
@@ -1,9 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Page Accueil | Home
+{% block title %}Les réservations | example
 {% endblock %}
 
 {% block body %}
+
 	<div class="video-bg">
 		<video width="320" height="240" autoplay loop muted>
 			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
@@ -14,30 +15,59 @@
 		<svg viewbox="0 0 24 24" stroke="currentColor" stroke-width="1.5" fill="none" stroke-linecap="round" stroke-linejoin="round">
 			<path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg>
 	</div>
-
-	{# ----header desktop--- #}
 	<div class="app">
 		{% include "partials/header1.html.twig" %}
-		{# ----navbar left--- #}
 		<div class="wrapper">
 			<div class="left-side">
 				<div class="side-wrapper">
-					{% include "partials/navleft.html.twig" %}
+					<div class="side-wrapper">
+						<div class="side-title">Présentation</div>
+						<div class="side-menu">
+							<a href="{{ path('histoire') }}">
+								Mon histoire...
+							</a>
+							<a href="{{ path('vehicules') }}">
+								Mes véhicules
+							</a>
+							<a href="{{ path('avis') }}">
+								Vos avis
+							</a>
+
+						</div>
+					</div>
+					<div class="side-title">Services</div>
+					<div class="side-menu">
+						<a href="{{ path('disposition') }}">
+
+
+							Mise à disposition
+						</a>
+						<a href="{{ path('chauffeur') }}">
+
+							Chauffeur Privée
+						</a>
+						<a href="{{ path('visite') }}">
+
+							Visite des chateaux
+						</a>
+						<a href="{{ path('personne') }}">+8 personnes</a>
+						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>>
+					</div>
+				</div>
+				<div class="side-wrapper">
+					<div class="side-title">Légal</div>
+					<div class="side-menu">
+						<a href="{{ path('mentionslegales') }}">
+							Mentions légals
+						</a>
+						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
+						<a href="{{ path('apropos') }}">A propos</a>
+					</div>
 				</div>
 			</div>
-
-			{# -----header mobile ---------- #}
 			<div class="main-container">
-				{% include "partials/headermobile.html.twig" %}
 
-				<div class="content-wrapper">
-					<div class="content-wrapper-header">
-						<div class="content-wrapper-context container"><h1 class="container text-center ">Inscrivez-vous 
-					</h1></div>
-					</div>
-
-					{# formulaire inscription  #}
-<div class="content-section text-white">
+				<div class="content-section text-white">
 					<div class="content-section-title">Mes commandes</div>
 					<ul>
 						<li class="adobe-product">
@@ -77,13 +107,13 @@
 
 
 					</ul>
-				{# fin du foàrmulaire  #}
-
+				</div>
+				<div class="content-section">
+					<div class="content-section-title"></div>
 
 				</div>
 			</div>
-
-			<div class="overlay-app"></div>
 		</div>
 	</div>
-{% endblock %}
+	<div class="overlay-app"></div>
+</div>{% endblock %}
