+Image Page Accueil

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -31,7 +31,7 @@
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper">
-					<div class="content-wrapper-header">
+					<div class="content-wrapper-header bg-info">
 						<div class="content-wrapper-context">
 							<h3 class="img-content">
 								Chauffeur privé
@@ -41,7 +41,8 @@
 								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Contactez</a>
 							</button>
 						</div>
-						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
+
+						<img class="content-wrapper-img  w-50 " heigth="150px"  src="{{asset('assets/images/chauffeurvtc.jpg')}}" alt="">
 					</div>
 
 					<div class="content-section">
