--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -16,6 +16,7 @@
 			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
 			<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
+			{# <a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a> #}
 		{% else %}
 			<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
 			<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
