MAJ header mobile dynamique fini

--- a/templates/partials/headermobile.html.twig
+++ b/templates/partials/headermobile.html.twig
@@ -2,23 +2,18 @@
 
 
 <div class="main-header menuOuvert ">
-					<p class="menu-link-main">Isy Drive</p>
-					<div class="header-menu">
-						<a class="main-header-link" href="{{path('home_page')}}">Accueil</a>
-						<a class="main-header-link is-active" href="{{path('app_order_new')}}">Commander une course</a>
-						<a class="main-header-link is-active" href="{{path('app_contact')}}">Contact</a>
-						<a class="main-header-link is-active" href="{{path('show_order')}}">Mes commandes</a>
-							<a class="main-header-link is-active" href="{{path('app_register')}}">Inscription</a>
-						<a class="main-header-link" href="{{path('app_login')}}">Connexion</a>
-
-					</div>
-				</div>
-
-
-
-
-
-
-
-
-
+	<p class="menu-link-main">Isy Drive</p>
+	<div class="header-menu">
+		{% if is_granted('ROLE_ADMIN') %}
+			<a class="main-header-link is-active" href="{{path('app_contact')}}">Contact</a>
+			<a class="main-header-link is-active" href="{{path('show_order')}}">Mes commandes</a>
+		{% elseif is_granted('ROLE_USER') %}
+			<a class="main-header-link" href="{{path('show_user')}}">Mon profil</a>
+			<a class="main-header-link is-active" href="{{path('show_order')}}">Mes commandes</a>
+		{% else %}
+			<a class="main-header-link" href="{{path('home_page')}}">Accueil</a>
+			<a class="main-header-link is-active" href="{{path('app_login')}}">Connexion</a>
+			<a class="main-header-link" href="{{path('app_register')}}">Inscription</a>
+		{% endif %}
+	</div>
+</div>
