--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -46,7 +46,7 @@
 					</div>
 
 					<div class="content-section">
-						<div class="content-section-title">Apps in your plan</div>
+						{# <div class="content-section-title">Apps in your plan</div> #}
 						<div class="apps-card">
 							<div class="app-card">
 								<span>
