--- a/templates/navleft/legales/conditionsgenerales.html.twig
+++ b/templates/navleft/legales/conditionsgenerales.html.twig
@@ -153,9 +153,10 @@
 						<div class="apps-card">
 	<div class="app-card">
 								<span>
-									IZY DRIVE DANS VOTRE VILLE
+									Un tarif connu à l’avance et sans surprise à l’arrivée
 								</span>
-								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card__subtext">A la réservation ou lors de votre demande de devis, un tarif vous est annoncé. Ce tarif est celui que vous réglerez une fois la course terminée. Et ce, qu’il y ait des embouteillages, plus de bagages de prévu ou une personne supplémentaire.
+.</div>
 								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
 									{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
@@ -163,9 +164,9 @@
 							</div>
 							<div class="app-card">
 								<span>
-									IZY DRIVE DANS VOTRE VILLE
+									Facilité de paiement
 								</span>
-								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								<div class="app-card__subtext">Dans la voiture, vous pourrez régler votre course par carte bancaire ou en espèces. Et pour plus de flexibilité, n’oubliez pas la réservation en ligne offrant la possibilité d’un paiement par CB, Paypal..
 								</div>
 								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
 									{# <button class="content-button status-button">Update</button> #}
@@ -175,9 +176,10 @@
 
 							<div class="app-card">
 								<span>
-									SERVICE AU KM
+									Accessible 24h/24 et 7 jours/7
 								</span>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card__subtext">Vous cherchez un chauffeur qui puisse vous transférer dans l’instant. Grâce à notre outil de réservation en ligne, réservez à n’importe quelle heure, c’est vous qui définissez l’horaire et le lieu du rendez-vous. Une confirmation vous est envoyée et nous venons à votre rencontre (sous réserve de disponibilité du véhicule au moment de la réservation).
+</div>
 								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
 									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 									{# <div class="menu"></div> #}
