+MAJ header + profil user

--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -89,6 +89,8 @@
 						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
 					</div>
 
+    <a href="{{ path('app_user_edit', {'id': app.user.id}) }}">Modifier </a>
+	 <a href="{{ path('app_user_delete', {'id': app.user.id}) }}">Supprimer </a>
 
 				</div>
 			</div>
