--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -1,6 +1,5 @@
 {# -----header desktop----- #}
-
-<div class="header">
+<header class="header">
 	<div class="menu-circle"></div>
 	<a class="menuSelector mob text-white">
 		<i class="fas fa-bars"></i>
@@ -16,11 +15,11 @@
 			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 			<a class="menu-link notify desk" href="{{path('show_user')}}">Mon profil</a>
 			<a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a>
-			{# <a class="menu-link notify desk" href="{{path('show_order')}}">Mes commandes</a> #}
+			
 		{% else %}
 			<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
 			<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
-			{# <a class="menu-link notify" href="{{path('templates/APIMETO/index.php')}}">Météo</a> #}
+		
 		{% endif %}
 	</div>
 
@@ -36,4 +35,4 @@
 		</svg>
 		<img class="profile-img" src="https://images.unsplash.com/photo-1600353068440-6361ef3a86e8?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80" alt="">
 	</div>
-</div>
+</header>
