MAJ contenu card principal  image et texte

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -34,15 +34,15 @@
 					<div class="content-wrapper-header bg-info">
 						<div class="content-wrapper-context">
 							<h3 class="img-content">
-								Chauffeur privé
+								Votre chauffeur privé
 							</h3>
-							<div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div>
+							<div class="content-text">Commandez une course sans plus attendre avec votre chauffeur préféré.</div>
 							<button class="content-button bg-white  bold">
-								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Contactez</a>
+								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Reservez!</a>
 							</button>
 						</div>
 
-						<img class="content-wrapper-img  w-50 " heigth="150px"  src="{{asset('assets/images/chauffeurvtc.jpg')}}" alt="">
+						<img class="content-wrapper-img  w-75 " min-heigth="150px"  src="{{asset('assets/images/chauffeurvtc.png')}}" alt="">
 					</div>
 
 					<div class="content-section">
