--- a/templates/partials/header1.html.twig
+++ b/templates/partials/header1.html.twig
@@ -19,7 +19,7 @@
 		{% else %}
 			<a class="menu-link notify desk" href="{{path('show_user')}}">Connexion</a>
 			<a class="menu-link notify desk" href="{{path('app_register')}}">Inscription</a>
-
+			<a class="menu-link desk" href="{{path('app_contact')}}">Contact</a>
 		{% endif %}
 	</div>
 
