MAJ white APP component + MAJ header bouton fermer

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -38,7 +38,7 @@
 							</h3>
 							<div class="content-text">Commandez une course sans plus attendre avec votre chauffeur préféré.</div>
 							<button class="content-button bg-white  bold">
-								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Reservez!</a>
+								<a class="bg-white text-success text-decoration-none" href="{{path('app_order_new')}}">Reservez!</a>
 							</button>
 						</div>
 
