MAJ couleur card principal

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -421,18 +421,18 @@ body.light-mode .video-bg:before {
   background-image: url("https://www.transparenttextures.com/patterns/cubes.png"),
    linear-gradient(
     to right top,
-    #cf4af3,
-    #e73bd7,
-    #f631bc,
-    #fd31a2,
-    #ff3a8b,
-    #ff4b78,
-    #ff5e68,
-    #ff705c,
-    #ff8c51,
-    #ffaa49,
-    #ffc848,
-    #ffe652
+    #66041B,
+    #590318,
+    #4F0315,
+    #450212,
+    #36020E,
+    #29010B,
+    #191b44,
+    #2D3175,
+    #292C6B,
+    #262963,
+    #1E214F,
+    #1B1D46
    );
   border-radius: 14px;
   padding: 20px 40px;
