MAJ color texte
j'ai mis le texte gris en blanc

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -11,7 +11,7 @@
  --theme-bg-color: rgba(16 18 27 / 40%);
  --border-color: rgba(113 119 144 / 25%);
  --theme-color: #f9fafb;
- --inactive-color: rgb(113 119 144 / 78%);
+ --inactive-color: rgba(199, 203, 216, 0.78);
  --body-font: "Poppins", sans-serif;
  --hover-menu-bg: rgba(12 15 25 / 30%);
  --content-title-color: #999ba5;
