+MAJ template aporops

--- a/templates/navleft/presentations/apropos.html.twig
+++ b/templates/navleft/presentations/apropos.html.twig
@@ -177,11 +177,16 @@
 									</div>
 								</div>
 
-								<div class="app-card">
+								{# <div class="app-card">
 									<span>
 										SERVICE AU KM
 									</span>
-									<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC dans les grandes villes, et vers les aéroports.Pour toute demande d'information complémentaire, n'hésitez pas à nous contacter ou à contacter directement votre chauffeur. A bientôt !</div>
+									<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC dans les grandes villes, et vers les aéroports.Pour toute demande d'information complémentaire, n'hésitez pas à nous contacter ou à contacter directement votre chauffeur. A bientôt !</div> #}
+									<div class="app-card">
+                                    <span>
+                                        SERVICE IZY DRIVE
+                                    </span>
+                                    <div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements dans les grandes villes, et vers les aéroports. Pour toute demande d'information complémentaire, n'hésitez pas à contacter directement votre chauffeur.</div>
 									<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
 										{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 										{# <div class="menu"></div> #}
