--- a/templates/partials/navleft.html.twig
+++ b/templates/partials/navleft.html.twig
@@ -2,8 +2,8 @@
 					<div class="side-wrapper">
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
-							<a href="{{ path('histoire') }}">
-								Mon histoire...
+							<a href="{{ path('apropos') }}">
+								A propos 
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
@@ -40,7 +40,7 @@
 							Mentions légals
 						</a>
 						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
-						<a href="{{ path('apropos') }}">A propos</a>
+					
 						<a href="{{ path('nouscontacter') }}">Nous contacter </a>
 					</div>
 				</div>
