--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -4,7 +4,6 @@
 {% endblock %}
 
 {% block body %}
-
 	<div class="video-bg">
 		<video width="320" height="240" autoplay loop muted>
 			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
@@ -19,32 +18,72 @@
 	{# ----header desktop--- #}
 	<div class="app">
 		{% include "partials/header1.html.twig" %}
-		{# ----navbar left--- #}
+	{# ----navbar left--- #}
 		<div class="wrapper">
 			<div class="left-side">
 				<div class="side-wrapper">
 					{% include "partials/navleft.html.twig" %}
 				</div>
 			</div>
-
-			{# -----header mobile ---------- #}
+			
+	{# -----header mobile ---------- #}
 			<div class="main-container">
 				{% include "partials/headermobile.html.twig" %}
 
-				<div class="content-wrapper  bg-opacity-75 bg-light-mode">
-					{# <div class="content-wrapper-header">
-					<div class="content-wrapper-context container">
-					<h1 class="container text-center ">Inscrivez-vous</h1></div>
-					</div> #}
+				<div class="content-wrapper">
+					<div class="content-wrapper-header">
+						<div class="content-wrapper-context">
+							<h3 class="img-content">
+								Chauffeur privé
+							</h3>
+							<div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div>
+							<button class="content-button bg-white  bold"><a class="bg-white text-success text-decoration-none"  href="{{path('app_contact')}}">Contactez</a></button>
+						</div>
+						<img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt="">
+					</div>
+				
+					<div class="content-section">
+						
+						<div class="apps-card">
+	<div class="app-card">
+								<span>
+									IZY DRIVE DANS VOTRE VILLE
+								</span>
+								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card-buttons"> <img src="https://images.pexels.com/photos/1170178/pexels-photo-1170178.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="#">
+									 
+									 <div class="menu"></div> 
+								</div>
+							</div>
+							<div class="app-card">
+								<span>
+									IZY DRIVE DANS VOTRE VILLE
+								</span>
+								 <img src="https://images.pexels.com/photos/69121/passenger-traffic-airline-aviation-air-transportation-69121.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								</div>
+								<div class="app-card-buttons">
+									
+									 <div class="menu"></div> 
+								</div>
+							</div>
 
-					{# gares   #}
-					<h1>Daouda</h1>
-
-						{# fin du gares#} </div>
+							<div class="app-card">
+								<span>
+									SERVICE AU KM
+								</span>
+								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card-buttons">
+									<img src="https://images.pexels.com/photos/9846135/pexels-photo-9846135.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="#"> 
+									 <div class="menu"></div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
-
-				<div class="overlay-app"></div>
 			</div>
 		</div>
+		<div class="overlay-app"></div>
+	</div>
 
-	{% endblock %}
+{% endblock %}
