--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -23,8 +23,8 @@
 					<div class="side-wrapper">
 						<div class="side-title">Présentation</div>
 						<div class="side-menu">
-							<a href="{{ path('histoire') }}">
-								Mon histoire...
+							<a href="{{ path('apropos') }}">
+								A propos
 							</a>
 							<a href="{{ path('vehicules') }}">
 								Mes véhicules
