--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -32,7 +32,7 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<h1>Daouda
+						<h1>Formulaire de contact
 						</h1>
 					</div>
 					<div class="row form-group">
