+Ajout caroussel template navleft/services=> dispositions

--- a/templates/navleft/services/aeroport_gare.html.twig
+++ b/templates/navleft/services/aeroport_gare.html.twig
@@ -32,14 +32,16 @@
 
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
-						<div class="content-wrapper-context">
-							<h3 class="img-content">
-								Chauffeur privé
+							<h3 class="img-content text-center container animate__animated animate__rotateInDownRight">
+								👉 Votre VTC Izy Drive permet, à bord de ses transports alternatifs avec un prix fixé à l'avance de vous accompagner en gares, aux aérogares, et dans tous les manifestations ou conférences professionnelles. <br>
+								👉 Vous portez garant et le maximum de confort avant votre départ à bord des trains, en voyage. La priorité est de vous satisfaire. 
 							</h3>
-							<div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div>
-							<button class="content-button bg-white  bold">
+							
+						<div class="content-wrapper-context">
+							{# <div class="content-text">Riche d’une expérience de conduite de 20 années, votre chauffeur maitrise 5 langues : anglais, français, espagnol, portugais et brésilien. Diplômé, il est titulaire du N° de licence.</div> #}
+							{# <button class="content-button bg-white  bold">
 								<a class="bg-white text-success text-decoration-none" href="{{path('app_contact')}}">Contactez</a>
-							</button>
+							</button> #}
 						</div>
 						{# <img class="content-wrapper-img" src="https://assets.codepen.io/3364143/glass.png" alt=""> #}
 					</div>
@@ -52,7 +54,7 @@
 									<h3 class="animate__flip">En ville
 									</h3>
 								</span>
-								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card__subtext">Vous devez vous rendre à un rendez-vous ? Vous allez à l'aéroport ? Faite appel aux services de VTC Izy Drive. Votre chauffeur de luxe effectue tous vos transferts vers les aéroports et gares de votre ville. </div>
 								<div class="app-card-buttons">
 									<img src="https://images.pexels.com/photos/1170178/pexels-photo-1170178.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image">
 
