+integration des images
intégration des images vehicules

--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -149,16 +149,17 @@
 																</ul>
 															</div> #}
 					<div class="content-section">
-						<div class="content-section-title">Apps in your plan</div>
+						<div class="content-section-title">Notre flotte de vehicule</div>
 						<div class="apps-card">
 	<div class="app-card">
 								<span>
 									IZY DRIVE DANS VOTRE VILLE
 								</span>
 								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
-								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
-									{# <button class="content-button status-button">Update</button> #}
+								<div class="app-card-buttons"><img src="https://kirotravel.com/wp-content/uploads/2021/05/Voiture-noire.jpeg" alt="#">
+									{# <button class="content-button status-button">Update</button>
 									{# <div class="menu"></div> #}
+									
 								</div>
 							</div>
 							<div class="app-card">
@@ -167,7 +168,7 @@
 								</span>
 								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
 								</div>
-								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
+								<div class="app-card-buttons"><img src="https://montransport.com/local/provider_slideshow/3879/7385/5842eaf3e3e289.63863916.jpg" alt="">
 									{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
 								</div>
@@ -179,7 +180,7 @@
 								</span>
 								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
 								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
-									{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
+									<img src="https://monchauffeuralaclasse.fr/wp-content/uploads/2022/04/van-VTC-mcalcty.jpg" alt="#">
 									{# <div class="menu"></div> #}
 								</div>
 							</div>
