--- a/templates/navleft/presentations/apropos.html.twig
+++ b/templates/navleft/presentations/apropos.html.twig
@@ -32,11 +32,11 @@
 				{% include "partials/headermobile.html.twig" %}
 
 				<div class="content-wrapper m-4   ">
-					<div class=" content-wrapper ">
+					<div >
 						<h3>
 							Chauffeur privé
 						</h3>	
-						<img src="assets/images/photo-apropos.png" height:"400px" alt"a propos">
+						<img  src="assets/images/photo-apropos.png" height:"400px" alt"a propos">
 					<div class="content-text-context mt-5 ">Riche d’une expérience de 20 années dans le secteurs du VTC, IzyDrive c'est la garentis d'un trajet confortable  et 100% sécursé. 
 						Votre chauffeur expérimenté réalisera l'ensemble de vos trajets avec professionnalisme et discrétion. Des services et avantages qui profitent aux particuliers comme au professionnels, entreprises et sociétés.
 						<br> 
@@ -152,20 +152,20 @@
 																							</li>
 																						</ul>
 																					</div> #}
-						<div class="content-section">
+						<div class="content-section ">
 							<div class="content-section-title"> détails</div>
-							<div class="apps-card">
-								<div class="app-card">
+							<div class="apps-card ">
+								<aticle  class="app-card ">
 									<span>
 										IZY DRIVE DANS VOTRE VILLE
 									</span>
-									<div class="app-card__subtext">VTC IZY DRIVE, riche de 20 ans d'expérience est est présent dans toutes les grande ville,.</div>
-									<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
-										{# <button class="content-button status-button">Update</button> #}
-										{# <div class="menu"></div> #}
-									</div>
-								</div>
-								<div class="app-card">
+									<div class="app-card__subtext ">VTC IZY DRIVE, riche de 20 ans d'expérience est est présent dans toutes les grande ville,.</div>
+									{# <div class="app-card-buttons"><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#">
+										<button class="content-button status-button">Update</button>
+										<div class="menu"></div>
+									</div> #}
+								</aticle>
+								<article class="app-card">
 									<span>
 										HORAIRE IZY DRIVE
 									</span>
@@ -175,14 +175,15 @@
 										{# <button class="content-button status-button">Update</button> #}
 										{# <div class="menu"></div> #}
 									</div>
-								</div>
+								</article>
 
 								{# <div class="app-card">
 									<span>
 										SERVICE AU KM
 									</span>
-									<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC dans les grandes villes, et vers les aéroports.Pour toute demande d'information complémentaire, n'hésitez pas à nous contacter ou à contacter directement votre chauffeur. A bientôt !</div> #}
-									<div class="app-card">
+									<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC dans les grandes villes, et vers les aéroports.Pour toute demande d'information complémentaire, n'hésitez pas à nous contacter ou à contacter directement votre chauffeur. A bientôt !</div>
+									</div> #}
+									<article class="app-card">
                                     <span>
                                         SERVICE IZY DRIVE
                                     </span>
@@ -191,8 +192,8 @@
 										{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/louer-un-vehicule-avec-chauffeur-a-toulouse-1.jpg" alt="#"> #}
 										{# <div class="menu"></div> #}
 									</div>
-								</div>
-							</div>
+								</article>
+							
 						</div>
 					</div>
 				</div>
