--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -153,9 +153,12 @@
 						<div class="apps-card">
 	<div class="app-card">
 								<span>
-									IZY DRIVE DANS VOTRE VILLE
+									MODERNE
 								</span>
-								<div class="app-card__subtext">VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
+								<div class="app-card__subtext"> Alliance du confort et de la technologie,
+								système de vision nocturne night vision et les phares Intellilux led
+								
+								VTC IZY DRIVE, riche de l'expérience depuis 25 ans pour vous accompagner dans vos dépalacements en France métropolitan. Où que vous soyez dans la Haute Garonne, faites appel à vore chauffeur pour tous vos besoins. Votre confort est notre priorité.</div>
 								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#"> #}
 									{# <button class="content-button status-button">Update</button> #}
 									{# <div class="menu"></div> #}
@@ -163,9 +166,11 @@
 							</div>
 							<div class="app-card">
 								<span>
-									IZY DRIVE DANS VOTRE VILLE
+									COVID 19 ET LES AUTRES
 								</span>
-								<div class="app-card__subtext">Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
+								<div class="app-card__subtext"> Tous nos vehicules respectent les normes sanitaire. Equipé de la technologie  son équipé d'un systeme de 
+								
+								Quelle que soit votre destination ou votre demande personnalisée, que vous soyez particuliers ou professionnels, nous vous proposons un service de transport de personnes de qualité, transparent et sécurisé, avec des chauffeurs professionnels, expérimentés et à votre écoute.
 								</div>
 								<div class="app-card-buttons">{# <img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-EXCELLENCE-SERVICE-CONCIERGERIE.jpg" alt=""> #}
 									{# <button class="content-button status-button">Update</button> #}
@@ -175,7 +180,7 @@
 
 							<div class="app-card">
 								<span>
-									SERVICE AU KM
+									ÉQUIPEMENT
 								</span>
 								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
 								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
