--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -178,9 +178,10 @@
 								<span>
 									SERVICE AU KM
 								</span>
-								<div class="app-card__subtext">Nous opérons 7J/7 et 24h/24, pour vos déplacements en VTC sur Paris, Bordeaux et Strasbourg, vers les aéroports, mais aussi pour vos rendez-vous professionnels, conférences, parcs d'affaires etc. Et pour toute demande d'information complémentaire, n'hésitez pas à nous contacter. A bientôt !</div>
+								<div class="app-card__subtext">Vous voyagez en groupe, vous aimez avoir de l’espace ou disposez de nombreux bagages ?
+Déplacez-vous dans l’un de nos vans tout confort pour profiter de son habitabilité maximale. Comme pour nos autres services, nos chauffeurs Vans VTC vous garantiront ponctualité et sécurité pour tous vos déplacements sur Marseille et la région PACA.</div>
 								<div class="app-card-buttons">{# <button class="content-button status-button">Update</button> #}
-									<img src="https://monchauffeuralaclasse.fr/wp-content/uploads/2022/04/van-VTC-mcalcty.jpg" alt="#">
+									<img src="https://monchauffeuralaclasse.fr/wp-content/uploads/2022/04/van-VTC-mcalcty.jpg" alt="Van-VTC">
 									{# <div class="menu"></div> #}
 								</div>
 							</div>
