--- a/templates/navleft/presentations/apropos.html.twig
+++ b/templates/navleft/presentations/apropos.html.twig
@@ -154,17 +154,17 @@
 																					</div> #}
 						<div class="content-section ">
 							<div class="content-section-title"> détails</div>
-							<div class="apps-card ">
-								<aticle  class="app-card ">
+							<div class="app-card ">
+								<article  class="app-card">
 									<span>
 										IZY DRIVE DANS VOTRE VILLE
 									</span>
-									<div class="app-card__subtext ">VTC IZY DRIVE, riche de 20 ans d'expérience est est présent dans toutes les grande ville,.</div>
+									<div class="app-card__subtext ">VTC IZY DRIVE est présent dans toutes les grande ville,.</div>
 									{# <div class="app-card-buttons"><img src="https://vtcexcellence.com/wp-content/uploads/2021/05/VTC-Toulouse-Chauffeur-jpg.jpg" alt="#">
 										<button class="content-button status-button">Update</button>
 										<div class="menu"></div>
 									</div> #}
-								</aticle>
+								</article>
 								<article class="app-card">
 									<span>
 										HORAIRE IZY DRIVE
