+MAJ hauteur vehicule +mentions légales

--- a/templates/navleft/presentations/vehicules.html.twig
+++ b/templates/navleft/presentations/vehicules.html.twig
@@ -151,7 +151,7 @@
 					<div class="content-section">
 						<div class="content-section-title">Notre flotte de vehicule</div>
 						<div class="apps-card">
-	<div class="app-card">
+	<div class="app-card h-100">
 								<span>
 									MODERNE
 								</span>
@@ -162,7 +162,7 @@
 									
 								</div>
 							</div>
-							<div class="app-card">
+							<div class="app-card h-100">
 								<span>
 									COVID 19 ET LES AUTRES
 								</span>
@@ -176,7 +176,7 @@
 								</div>
 							</div>
 
-							<div class="app-card">
+							<div class="app-card h-100">
 								<span>
 									ÉQUIPEMENT
 								</span>
