--- a/templates/user/profil.user.html.twig
+++ b/templates/user/profil.user.html.twig
@@ -8,7 +8,7 @@
 	<div class="video-bg">
 		<video width="320" height="240" autoplay loop muted>
 			<source src="https://assets.codepen.io/3364143/7btrrd.mp4" type="video/mp4">
-			Your browser does not support the video tag.
+			Votre navigateur ne supporte pas les backgrounds SCSS
 		</video>
 	</div>
 	<div class="dark-light">
@@ -20,52 +20,11 @@
 		<div class="wrapper">
 			<div class="left-side">
 				<div class="side-wrapper">
-					<div class="side-wrapper">
-						<div class="side-title">Présentation</div>
-						<div class="side-menu">
-							<a href="{{ path('apropos') }}">
-								A propos
-							</a>
-							<a href="{{ path('vehicules') }}">
-								Mes véhicules
-							</a>
-							<a href="{{ path('avis') }}">
-								Vos avis
-							</a>
-
-						</div>
-					</div>
-					<div class="side-title">Services</div>
-					<div class="side-menu">
-						<a href="{{ path('disposition') }}">
-
-
-							Mise à disposition
-						</a>
-						<a href="{{ path('chauffeur') }}">
-
-							Chauffeur Privée
-						</a>
-						<a href="{{ path('visite') }}">
-
-							Visite des chateaux
-						</a>
-						<a href="{{ path('personne') }}">+8 personnes</a>
-						<a href="{{ path('aeroport_gare') }}">Aéroports & Gares</a>
-					</div>
-				</div>
-				<div class="side-wrapper">
-					<div class="side-title">Légal</div>
-					<div class="side-menu">
-						<a href="{{ path('mentionslegales') }}">
-							Mentions légals
-						</a>
-						<a href="{{ path('conditionsgenerales') }}">Conditions générales</a>
-						<a href="{{ path('apropos') }}">A propos</a>
-					</div>
-				</div>
+				{% include "partials/navleft.html.twig" %}
+			</div>
 			</div>
 			<div class="main-container">
+			{% include "partials/headermobile.html.twig" %}
 				<div class="content-wrapper">
 					<div class="content-wrapper-header">
 						<div class="content-wrapper-context">
